manifests/cosmos/pryzm/monitoring.yaml
###
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  pryzm-chain-monitor
  namespace: cosmos
spec:
  selector:
    matchLabels:
      app:  pryzm-chain-monitor
  template:
    metadata:
      labels:
        app:  pryzm-chain-monitor
        kind-of: cosmos-exporter
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9300"        
    spec:
      containers:
      - name:  cosmos-exporter
        image: ghcr.io/pfc-developer/cosmos-exporter:v2.1.7
          
        resources:
          limits:
            memory: "1Gi"
            cpu: "1500m"
        ports:
            - containerPort: 9300
              name: prometheus
              protocol: TCP
        command: [ /usr/local/bin/pryzm-cosmos-exporter ]              
        args:
        #    - --denom=upryzm
            - --denom=factory/pryzm1jnhcsa5ddjsjq2t97v6a82z542rduxvtw6wd9h/uauuu
            - --denom-coefficient=1000000
            - --bech-prefix=pryzm
            - --node=pryzm:9090 
            - --tendermint-rpc=http://pryzm:26657
            - --single
            - --lcd=http://pryzm:1317            
            - --price=false
            - --params=false   
            - --external-node=grpc.pryzm.zone:443         
      affinity:
        # place the price feeder in the same zone as node it is pushing stuff into
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key:  app.kubernetes.io/name
                operator: In
                values:
                - pryzm
            topologyKey: "zone"
